Changes: - Fixed the explore page having 2 buttons for going back to the Street Friends About page - Adjusted the home button for better resizing and styling. - Made the chibi container use space-around instead of space-between. - Removed flex-grow on .chibi-section, fixing the issue I was having where the home button gets squished. - Adjusted the explore page tooltip positions a little bit. - Added more fun facts for Alek, QD, Squiddo, and Doggie.

--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ body {
     width: 100%;
 }
 
-/* Back Button */
+/* Back Buttons */
 
 .back-button {
     position: fixed;
@@ -162,6 +162,14 @@ body {
     color: white;
     border: 0;
     border-radius: 25px;
+    cursor: pointer;
+}
+
+#home-image {
+    aspect-ratio: 1/1;
+    width: 64px;
+    height: 64px;
+    /* flex-grow: 1; */
     cursor: pointer;
 }
 
