--- a/css/sf_about.css
+++ b/css/sf_about.css
@@ -61,7 +61,7 @@
 
 .support-container {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 10%;
@@ -73,20 +73,13 @@
     flex-wrap: nowrap;
     justify-content: center;
     align-items: flex-end;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     /* width: 100%; */
     height: 100%;
 }
 
 .chibi {
     height: 100%;
-}
-
-#home-image {
-    width: auto;
-    aspect-ratio: 1/1;
-    height: 100%;
-    cursor: pointer;
 }
 
 @media (max-width: 1080px) {
@@ -117,6 +110,7 @@
         height: 14vw;
     }
     #home-image {
-        height: 100%;
+        width: 96px;
+        height: 96px;
     }
 }
