--- a/css/sf_explore.css
+++ b/css/sf_explore.css
@@ -47,25 +47,25 @@ body {
 .candy-store-tooltip {
     aspect-ratio: auto;
     width: 75%;
-    transform: translate(-64%, -53%);
+    transform: translate(-64%, -51%);
 }
 
 .gated-playground-tooltip {
     aspect-ratio: auto;
     width: 40%;
-    transform: translate(-84%, -47%);
+    transform: translate(-84%, -45%);
 }
 
 .playground-tooltip {
     aspect-ratio: auto;
     width: 40%;
-    transform: translate(-82%, -46%);
+    transform: translate(-82%, -44%);
 }
 
 .campfire-tooltip {
     aspect-ratio: auto;
     width: 40%;
-    transform: translate(-18%, -73%);
+    transform: translate(-18%, -71%);
 }
 
 .alek-qd-house-tooltip {
@@ -77,14 +77,15 @@ body {
 .squiddo-doggie-house-tooltip {
     aspect-ratio: auto;
     width: 35%;
-    transform: translate(-69%, -15%);
+    transform: translate(-69%, -16%);
 }
 
 
-#home-button {
+#home-image {
     position: fixed;
     bottom: 2.5%;
     width: 64px;
+    cursor: pointer;
 }
 
 /* Interactable id's */
